--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <!-- Primary Meta Tags -->
     <title>PoasterGPT -- An AI fine-tuned to product hot takes</title>
-    <meta name="title" content="PoasterGPT -- An AI fine-tuned to product hot takes" />
+    <meta name="title" content="PoasterGPT -- An AI fine-tuned to produce hot takes" />
     <meta name="description"
         content="We would all love if GPT could generate 🔥 takes, but let's face it 99% of the time it generates some politically correct clustroid-center of human thought." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://poastergpt.streamlit.app/" />
-    <meta property="og:title" content="PoasterGPT -- An AI fine-tuned to product hot takes" />
+    <meta property="og:title" content="PoasterGPT -- An AI fine-tuned to produce hot takes" />
     <meta property="og:description"
         content="We would all love if GPT could generate 🔥 takes, but let's face it 99% of the time it generates some politically correct clustroid-center of human thought." />
     <meta property="og:image" content="https://raw.githubusercontent.com/RyanLucas3/poasterGPTWeb/main/poasterGPT.png" />
@@ -22,7 +22,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://poastergpt.streamlit.app/" />
-    <meta property="twitter:title" content="PoasterGPT -- An AI fine-tuned to product hot takes" />
+    <meta property="twitter:title" content="PoasterGPT -- An AI fine-tuned to produce hot takes" />
     <meta property="twitter:description"
         content="We would all love if GPT could generate 🔥 takes, but let's face it 99% of the time it generates some politically correct clustroid-center of human thought." />
     <meta property="twitter:image" content="https://raw.githubusercontent.com/RyanLucas3/poasterGPTWeb/main/poasterGPT.png" />
